# OTS

./: .gitignore  CMakeLists.txt  CMakePresets.json  OTS.sln  README.md
OTS/: App.cpp  App.h  Controller.cpp  Controller.h  IFrameStream.h  OTS.vcxproj  OTS.vcxproj.filters  Pixel.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Recorder.cpp  Recorder.h  Screen.cpp  Screen.h  VideoBuffer.cpp  VideoBuffer.h  main.cpp
